refacotr alot of small stuff, better clean code :D